--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "provide administrative boundary of Germany as GeoJSON (states)",
   "main": "build/src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "check": "gts check",
     "clean": "gts clean",
     "compile": "tsc -p .",
@@ -18,8 +18,11 @@
   "license": "Apache-2.0",
   "repository": "github:SBejga/germany-administrative-geojson",
   "devDependencies": {
+    "@types/jest": "^23.1.5",
     "@types/jsonfile": "^4.0.1",
     "gts": "^0.7.1",
+    "jest": "^23.4.0",
+    "ts-jest": "^23.0.0",
     "typescript": "~2.8.0"
   },
   "dependencies": {
